Change to name of teams

--- a/template.tex
+++ b/template.tex
@@ -47,7 +47,7 @@
 }
 
 \title{Notebook - Maratona de Programação}
-\author{Heladito??}
+\author{Prisioneiras de WA e WAstros}
 \date{}
 
 \begin{document}
